# memes-bot

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
header/: Mainloop.hpp  Post.hpp  TgAPI.hpp  VKAPI.hpp
src/: Mainloop.cpp  Post.cpp  TgAPI.cpp  VKAPI.cpp
